--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng2-redux": "^5.1.2",
     "redux": "^3.6.0",
     "rxjs": "^5.1.0",
+    "tassign": "^1.0.0",
     "typescript": "^2.0.0",
     "zone.js": "^0.8.4"
   },
