--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ng2-bootstrap": "^1.6.1",
     "ng2-redux": "^5.1.2",
     "redux": "^3.6.0",
     "rxjs": "^5.1.0",
